syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/PlatosCodes/desserted/backend/pb";


message FriendRequest {
    int64 friendship_id = 1;
    int64 friender_id = 2;
    string friender_username = 3;
    google.protobuf.Timestamp friended_at = 4;
}
